# Neural-network-c-

./: .gitattributes  CMakeLists.txt  Makefile  README.md  nn.cpp  testEigen.cpp
inference/: CmakeLists.txt  main.cpp
modules/: CmakeLists.txt
modules/src/modules/: activations.cpp  activations.hpp  dense.cpp  dense.hpp  input.cpp  input.hpp  layer.hpp  model.cpp  model.hpp
